--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "start": "tsnd src/index.ts"
   },
   "devDependencies": {
+    "@types/inquirer": "^7.3.1",
     "@types/node": "^14.14.6",
+    "@types/shelljs": "^0.8.8",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.13.0",
