--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sti",
+  "name": "sti-cli",
   "version": "0.1.0",
   "description": "cli para configuração de ambiente da Sti Uff.",
   "main": "src/index.ts",
@@ -33,5 +33,18 @@
     "figlet": "^1.5.0",
     "inquirer": "^7.3.3",
     "shelljs": "^0.8.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/LeoGurja/sti-cli.git"
+  },
+  "keywords": [
+    "sti",
+    "uff",
+    "cli"
+  ],
+  "bugs": {
+    "url": "https://github.com/LeoGurja/sti-cli/issues"
+  },
+  "homepage": "https://github.com/LeoGurja/sti-cli#readme"
 }
