--- a/package.json
+++ b/package.json
@@ -12,24 +12,37 @@
     "sti": "build/index.js"
   },
   "scripts": {
-    "build": "tsc",
-    "start": "DEBUG=true tsnd src/index.ts"
+    "build": "babel src --out-dir build --copy-files --extensions '.ts,.js'",
+    "dev": "DEBUG=true tsnd src/index.ts",
+    "test": "jest --coverage",
+    "check": "tsc"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
     "@types/inquirer": "^7.3.1",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/shelljs": "^0.8.8",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.13.0",
     "eslint-config-standard": "^16.0.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "jest": "^26.6.3",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/register": "^7.12.1",
+    "@babel/runtime": "^7.12.5",
     "chalk": "^4.1.0",
     "cli-table": "^0.3.1",
     "commander": "^6.2.0",
