--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sti-cli",
+  "name": "@sti-uff/cli",
   "version": "0.1.0",
   "description": "cli para configuração de ambiente da Sti Uff.",
   "main": "build/index.js",
@@ -26,6 +26,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/shelljs": "^0.8.8",
+    "@types/update-notifier": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "babel-jest": "^26.6.3",
@@ -48,7 +49,8 @@
     "commander": "^6.2.0",
     "figlet": "^1.5.0",
     "inquirer": "^7.3.3",
-    "shelljs": "^0.8.4"
+    "shelljs": "^0.8.4",
+    "update-notifier": "^5.0.1"
   },
   "repository": {
     "type": "git",
