--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sti-uff/cli",
-  "version": "0.1.3",
+  "version": "0.1.1-rc1",
   "description": "cli para configuração de ambiente da Sti Uff.",
   "main": "build/index.js",
   "author": "Leonardo Gurgel",
@@ -49,6 +49,7 @@
     "commander": "^6.2.0",
     "figlet": "^1.5.0",
     "inquirer": "^7.3.3",
+    "ora": "^5.1.0",
     "shelljs": "^0.8.4",
     "update-notifier": "^5.0.1"
   },
