--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sti-uff/cli",
-  "version": "0.1.1-rc1",
+  "version": "0.1.1",
   "description": "cli para configuração de ambiente da Sti Uff.",
   "main": "build/index.js",
   "author": "Leonardo Gurgel",
