--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@babel/preset-typescript": "^7.12.1",
     "@types/inquirer": "^7.3.1",
     "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.6",
+    "@types/node": "^14.14.14",
     "@types/shelljs": "^0.8.8",
     "@types/update-notifier": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
@@ -44,6 +44,7 @@
     "@babel/core": "^7.12.3",
     "@babel/register": "^7.12.1",
     "@babel/runtime": "^7.12.5",
+    "axios": "^0.21.0",
     "chalk": "^4.1.0",
     "cli-table": "^0.3.1",
     "commander": "^6.2.0",
